Fix spacing issues

--- a/src/components/ForecastTable/ForecastTable.css
+++ b/src/components/ForecastTable/ForecastTable.css
@@ -27,11 +27,14 @@
 .forecast-table .cell {
   /* increased width to support 3 digits */
   width: 26px;
-  height: 27px;
   flex-shrink: 0;
   text-align: center;
   padding-bottom: 3px;
   padding-top: 3px;
+}
+
+.forecast-table .cell:not(.tod) {
+  height: 27px;
 }
 
 .forecast-table .cell.border {
